// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > matches snapshot (error) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-error css-dev-only-do-not-override-xogyor css-var-_r_3_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (info) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-blue css-dev-only-do-not-override-xogyor css-var-_r_2_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (muted) 1`] = `
.c0.c0 {
  color: #6b7280;
}

<span
  class="ant-tag ant-tag-filled c0 css-dev-only-do-not-override-xogyor css-var-_r_5_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (neutral) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-default css-dev-only-do-not-override-xogyor css-var-_r_0_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (note) 1`] = `
.c0.c0 {
  color: #374151;
}

<span
  class="ant-tag ant-tag-filled c0 css-dev-only-do-not-override-xogyor css-var-_r_6_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (success) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-success css-dev-only-do-not-override-xogyor css-var-_r_1_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (warning) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-warning css-dev-only-do-not-override-xogyor css-var-_r_4_"
>
  label
</span>
`;
